git commit -m"First Gitbash Commit"

--- a/module3-cross-validation/LS_DS_223_assignment.ipynb
+++ b/module3-cross-validation/LS_DS_223_assignment.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,11 @@
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:  1.0min\n",
       "[Parallel(n_jobs=-1)]: Done   9 out of  21 | elapsed:  2.2min remaining:  2.9min\n",
-      "[Parallel(n_jobs=-1)]: Done  12 out of  21 | elapsed:  2.3min remaining:  1.7min\n"
+      "[Parallel(n_jobs=-1)]: Done  12 out of  21 | elapsed:  2.3min remaining:  1.7min\n",
+      "[Parallel(n_jobs=-1)]: Done  15 out of  21 | elapsed:  2.7min remaining:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done  18 out of  21 | elapsed:  2.7min remaining:   27.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  21 | elapsed:  2.8min remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  21 | elapsed:  2.8min finished\n"
      ]
     }
    ],
@@ -1364,7 +1368,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# trying github pushhh"
+   ]
   }
  ],
  "metadata": {
