--- a/module3-cross-validation/LS_DS_223_assignment.ipynb
+++ b/module3-cross-validation/LS_DS_223_assignment.ipynb
@@ -2324,7 +2324,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sssssss"
+   ]
   }
  ],
  "metadata": {
